@@ -1,3 +1,8 @@
+2008-06-03  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>
+
+	* configure.in: Changed bash'ism (if [...]) to more general code
+	(if test ...).
+
 2008-05-25  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>
 
 	* Version 1.22.16.
